# FileStringFilter

./: CMakeLists.txt  README.md  build.sh  config.h  file_info.h  file_processor.cpp  file_processor.h  main.cpp  salmonFiltuh.cpp  salmonFiltuh.h  search_utils.cpp  search_utils.h
